fix wonky status display on narrow screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,12 +40,14 @@ h2 {
     font-size: 1.4em;
     font-weight: normal;
     padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 h3 {
     font-size: inherit;
     font-weight: bold;
     padding-left: 5rem;
+    padding-right: 5rem;
 }
 
 input[type=number]{
